--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "generate": "npx drizzle-kit generate",
+    "migrate": "npx wrangler d1 migrations create dbs new",
+    "migrate:apply": "npx wrangler d1 migrations apply dbs --remote",
+    "migrate:local": "npx wrangler d1 migrations apply dbs --local",
+    "studio": "npx drizzle-kit studio",
+    "drop": "npx drizzle-kit drop",
+    "up": "drizzle-kit up:sqlite --schema=./app/drizzle/schema.server.ts"
   },
   "dependencies": {
-    "hono": "^4.5.1"
+    "@upstash/ratelimit": "^2.0.1",
+    "@upstash/redis": "^1.33.0",
+    "drizzle-orm": "^0.32.0",
+    "hono": "^4.5.1",
+    "lucia": "^3.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240718.0",
+    "@types/node": "^20.14.11",
+    "drizzle-kit": "^0.23.0",
     "wrangler": "^3.57.2"
   }
 }
