--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "generate": "npx drizzle-kit generate",
-    "migrate": "npx wrangler d1 migrations create dbs new",
-    "migrate:apply": "npx wrangler d1 migrations apply dbs --remote",
-    "migrate:local": "npx wrangler d1 migrations apply dbs --local",
+    "migrate": "npx wrangler d1 migrations create expense --name new",
+    "migrate:apply": "npx wrangler d1 migrations apply expense --remote",
+    "migrate:local": "npx wrangler d1 migrations apply expense --local",
     "studio": "npx drizzle-kit studio",
     "drop": "npx drizzle-kit drop",
     "up": "drizzle-kit up:sqlite --schema=./app/drizzle/schema.server.ts"
