--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@upstash/redis": "^1.33.0",
     "drizzle-orm": "^0.32.0",
     "hono": "^4.5.1",
-    "lucia": "^3.2.0"
+    "lucia": "^3.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240718.0",
