--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "up": "drizzle-kit up:sqlite --schema=./app/drizzle/schema.server.ts"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^3.0.0",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.33.0",
     "drizzle-orm": "^0.32.0",
