--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "up": "drizzle-kit up:sqlite --schema=./app/drizzle/schema.server.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.7.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.33.0",
     "@upstash/vector": "^1.1.4",
+    "better-sqlite3": "^11.1.2",
     "drizzle-orm": "^0.32.0",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.5.1",
     "lucia": "^3.2.0",
+    "oslo": "^1.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
