--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-hono-app",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev?channel-crossposting",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "generate": "npx drizzle-kit generate",
@@ -24,6 +24,7 @@
     "drizzle-zod": "^0.5.1",
     "hono": "^4.5.1",
     "lucia": "^3.2.0",
+    "nvm": "^0.0.4",
     "oslo": "^1.2.1",
     "zod": "^3.23.8"
   },
