--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@
 name = "my-hono-app"
 main = "src/index.ts"
 compatibility_date = "2024-07-18"
-compatibility_flags = ["cache_option_enabled"]
+# compatibility_flags = ["cache_option_enabled"]
 node_compat = true
 
 [vars]
