--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "up": "drizzle-kit up:sqlite --schema=./app/drizzle/schema.server.ts"
   },
   "dependencies": {
+    "@hono-rate-limiter/cloudflare": "^0.1.2",
+    "@hono-rate-limiter/redis": "^0.1.4",
+    "@hono/sentry": "^1.2.0",
+    "@hono/swagger-ui": "^0.4.0",
     "@hono/zod-validator": "^0.2.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
@@ -23,10 +27,12 @@
     "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.5.1",
+    "hono-rate-limiter": "^0.4.0",
     "lucia": "^3.2.0",
     "nvm": "^0.0.4",
     "oslo": "^1.2.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240718.0",
