--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.34.0",
     "@upstash/vector": "^1.1.5",
+    "axios": "^1.7.7",
     "better-sqlite3": "^11.1.2",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
