--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@hono/zod-validator": "^0.2.2",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@types/qs": "^6.9.15",
+    "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.34.0",
     "@upstash/vector": "^1.1.5",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.1.2",
+    "crypto": "^1.0.1",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.5.5",
@@ -34,6 +37,8 @@
     "lucia": "^3.2.0",
     "nvm": "^0.0.4",
     "oslo": "^1.2.1",
+    "qs": "^6.13.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.3.1"
   },
