--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hono/zod-validator": "^0.2.2",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/qs": "^6.9.15",
     "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.1",
@@ -30,6 +31,7 @@
     "axios": "^1.7.7",
     "better-sqlite3": "^11.1.2",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.5.5",
