--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nvm": "^0.0.4",
     "oslo": "^1.2.1",
     "qs": "^6.13.0",
+    "up-fetch": "^2.1.8",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.3.1"
@@ -48,6 +49,6 @@
     "@cloudflare/workers-types": "^4.20240806.0",
     "@types/node": "^22.2.0",
     "drizzle-kit": "^0.24.0",
-    "wrangler": "^3.70.0"
+    "wrangler": "4"
   }
 }
